--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,162 @@
+aiodns==3.0.0
+aiofiles==0.7.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+amqp==5.1.1
+appdirs==1.4.4
+apturl==0.5.2
+asgiref==3.7.2
+async-timeout==4.0.2
+attrs==22.1.0
+bcrypt==3.2.0
+beautifulsoup4==4.10.0
+beniget==0.4.1
+billiard==4.1.0
+blinker==1.4
+Brlapi==0.8.3
+Brotli==1.0.9
+cchardet==2.1.7
+celery==5.3.0
+certifi==2020.6.20
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.1.1
+chrome-gnome-shell==0.0.0
+cleo==1.0.0a4
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.4
+command-not-found==0.3
+crashtest==0.3.1
+crispy-bootstrap5==0.7
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.11.0
+dbus-python==1.2.18
+decorator==4.4.2
+deezer-py==1.3.6
+defer==1.0.6
+distro==1.7.0
+distro-info===1.1build1
+dj-database-url==2.0.0
 Django==4.2.1
-django_filter==23.2
+django-crispy-forms==2.0
+django-filter==23.2
+django-recommends==1.0.0
+django-rest-framework==0.1.0
 djangorestframework==3.14.0
+docopt==0.6.2
+duplicity==0.8.21
+fasteners==0.14.1
+fonttools==4.29.1
+frozenlist==1.3.1
+fs==2.4.12
+future==0.18.2
+gast==0.5.2
+gunicorn==20.1.0
+gyp==0.1
+html5lib==1.1
+httplib2==0.20.2
+idna==3.3
+img2pdf==0.4.2
+importlib-metadata==4.6.4
+iso8601==1.0.2
+jeepney==0.7.1
+jsonschema==3.2.0
+keyring==23.5.0
+kiwisolver==1.3.2
+kombu==5.3.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+lz4==3.1.3+dfsg
+m3u8==0.9.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+monotonic==1.6
+more-itertools==8.10.0
+mpmath==0.0.0
+multidict==6.0.2
+mutagen==1.45.1
+netifaces==0.11.0
+numpy==1.21.5
+oauthlib==3.2.0
+olefile==0.46
+packaging==21.3
+paramiko==2.9.3
+pathvalidate==2.5.2
+pexpect==4.8.0
+pikepdf==5.0.1+dfsg
+Pillow==9.0.1
+pipreqs==0.4.13
+ply==3.11
+prompt-toolkit==3.0.38
+protobuf==3.12.4
+ptyprocess==0.7.0
+PyAudio==0.2.11
+pycairo==1.20.1
+pycares==4.2.2
+pycparser==2.21
+pycryptodomex==3.15.0
+pycups==2.0.1
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pylev==1.4.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-sip==12.9.1
+PyQtWebEngine==5.15.5
+pyRFC3339==1.1
+pyrsistent==0.18.1
+python-apt==2.4.0+ubuntu1
+python-dateutil==2.8.2
+python-debian===0.1.43ubuntu1
+pythran==0.10.0
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+scipy==1.8.0
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+Send2Trash==1.8.1b0
+simple-term-menu==1.5.0
+six==1.16.0
+soupsieve==2.3.1
+sqlparse==0.4.4
+sympy==1.9
+systemd-python==234
+tomlkit==0.7.2
+tqdm==4.64.1
+typing_extensions==4.6.3
+tzdata==2023.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufoLib2==0.13.1
+ufw==0.36.1
+unattended-upgrades==0.1
+unicodedata2==14.0.0
+urllib3==1.26.5
+usb-creator==0.3.7
+vine==5.0.0
+wadllib==1.3.6
+wcwidth==0.2.6
+webencodings==0.5.1
+xdg==5
+xkit==0.0.0
+yarg==0.1.9
+yarl==1.8.1
+zipp==1.0.0
