--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==4.2.1
 django_filter==23.2
 djangorestframework==3.14.0
+django-crispy-forms==2.0
+django-recommends==1.0.0
+django-rest-framework==0.1.0
+gunicorn==20.1.0
