--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ djangorestframework==3.14.0
 django-crispy-forms==2.0
 django-recommends==1.0.0
 django-rest-framework==0.1.0
+crispy-bootstrap5==0.7
 gunicorn==20.1.0
 whitenoise==6.4.0
